crates/reap-pm-live/tests/ui/public_lane_service_requires_all_callbacks.rs
use reap_pm_live::PmPublicLaneService;

struct IncompleteConsumer;

impl PmPublicLaneService for IncompleteConsumer {}

fn main() {}
